Thread-safety concerns
git-svn-id: http://twcore.org/svn/trunk@34 9f8b3893-2a26-0410-9d00-a71e40fd2f77